// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test morph prepareTsMorph simple repo main pkg: importDeclarationsFlatText 1`] = `
Array [
  "lib\\\\__tests__\\\\complexRepo.test.ts: import { createWriteStream /* , mkdirSync */ } from \\"fs\\";",
  "lib\\\\__tests__\\\\git.test.ts: import { loadSimpleMadge } from \\"test_fixtures\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import { createWriteStream } from \\"fs\\";",
  "lib\\\\git.ts: import { basename } from \\"path\\";",
]
`;

exports[`test morph prepareTsMorph simple repo main pkg: tempRepo.status 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "split/ts-morph-split-packages",
  "deleted": Array [],
  "detached": false,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;

exports[`test morph prepareTsMorph simple repo main pkg: test_fixtures 1`] = `
Array [
  "lib\\\\__tests__\\\\git.test.ts: import { loadSimpleMadge } from \\"test_fixtures\\";",
]
`;

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: PackageMapping 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: importDeclarationsFlatText 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: tempRepo.status 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "split/test_fixtures",
  "deleted": Array [],
  "detached": false,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;

exports[`test morph save modified simple repo: tempRepo.status before 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "split/ts-morph-split-packages",
  "deleted": Array [],
  "detached": false,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;
